UI and functionality fixes - frontend

--- a/ticketmaster/src/app/ticket-add-edit/ticket-add-edit.component.html
+++ b/ticketmaster/src/app/ticket-add-edit/ticket-add-edit.component.html
@@ -1,10 +1,14 @@
-<div class="container">
-    <h2>{{ isEditing ? 'Edit Ticket' : 'Create Ticket' }}</h2>
-    <form (ngSubmit)="saveTicket()">
+<div class="w-2/3 m-auto">
+    <h2 class="mb-4 text-2xl font-semibold">{{ isEditing ? 'Edit Ticket' : 'Create a Ticket' }}</h2>
+    <form class="space-y-4" (ngSubmit)="saveTicket()">
         <div>
-            <label for="name">Name:</label>
-            <input type="text" id="name" [(ngModel)]="ticket.name" [ngModelOptions]="{standalone: true}" required>
+            <label class="block text-gray-700 font-medium">Name</label>
+            <input type="text" id="name" [(ngModel)]="ticket.name" [ngModelOptions]="{standalone: true}" required
+                class="border border-gray-300 rounded w-full py-2 px-3 text-gray-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent">
         </div>
-        <button type="submit">{{ isEditing ? 'Edit' : 'Create' }}</button>
+        <div class="flex justify-end">
+            <button type="submit" class="bg-blue-500 text-white font-semibold py-2 px-4 rounded hover:bg-blue-600">{{
+                isEditing ? 'Edit' : 'Create' }}</button>
+        </div>
     </form>
 </div>
