--- a/ticketmaster/src/app/tickets-listing/tickets-listing.component.html
+++ b/ticketmaster/src/app/tickets-listing/tickets-listing.component.html
@@ -1,27 +1,41 @@
-<div class="container">
-    <div class="search-bar">
-        <input type="text" [(ngModel)]="searchTerm" [ngModelOptions]="{standalone: true}" placeholder="Search..." (input)="search()">
-        <button (click)="clearSearch()">Clear</button>
+<div class="">
+    <div class="relative mb-4">
+        <input 
+            type="text" 
+            [(ngModel)]="searchTerm" 
+            [ngModelOptions]="{standalone: true}" 
+            placeholder="Search..."
+            class="border border-gray-300 rounded w-full py-2 px-3 pr-10 text-gray-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent"
+            (input)="search()">
+        <button
+            type="button"
+            (click)="clearSearch()"
+            class="absolute right-2 top-1/2 transform -translate-y-1/2 text-gray-500 hover:text-gray-700 focus:outline-none">
+            ✕
+          </button>
     </div>
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>ID</th>
-                <th>Name</th>
-                <th>Actions</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr *ngFor="let ticket of tickets">
-                <td>{{ ticket.sorting_id }}</td>
-                <td>{{ ticket.name }}</td>
-                <td>
-                    <button routerLink="/tickets/edit/{{ ticket._id }}">Edit</button>
-                    <button (click)="deleteTicket(ticket._id)">Delete</button>
-                </td>
-            </tr>
-        </tbody>
-    </table>
-
+    <div class="overflow-x-auto">
+        <table class="min-w-full border-collapse border border-gray-300">
+            <thead>
+                <tr class="bg-gray-100">
+                    <th class="border border-gray-300 px-4 py-2 text-left">ID</th>
+                    <th class="border border-gray-300 px-4 py-2 text-left">Name</th>
+                    <th class="border border-gray-300 px-4 py-2 text-left">Actions</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let ticket of tickets" class="bg-gray-50">
+                    <td class="border border-gray-300 px-4 py-2">#{{ ticket.sorting_id }}</td>
+                    <td class="border border-gray-300 px-4 py-2">{{ ticket.name }}</td>
+                    <td class="border border-gray-300 px-4 py-2">
+                        <button class="bg-blue-500 text-white font-semibold py-1 px-4 rounded hover:bg-blue-600"
+                            routerLink="/tickets/edit/{{ ticket._id }}">Edit</button>
+                        <button class="bg-red-500 text-white font-semibold py-1 px-4 rounded hover:bg-red-600 ml-3"
+                            (click)="deleteTicket(ticket._id)">Delete</button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 </div>
