pagination, lazyloading, interceptor, API fixes

--- a/ticketmaster/src/app/app.component.html
+++ b/ticketmaster/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="container mx-auto px-8 py-8">
 
     <div class="flex items-center justify-between mb-8">
-        <div class="text-lg font-semibold">Ticketmaster</div>
+        <a [routerLink]="['/tickets']" class="text-lg font-semibold">Ticketmaster</a>
         <a class="bg-blue-500 text-white font-semibold py-2 px-4 rounded hover:bg-blue-600"
             [routerLink]="['/tickets/create']">
             Create new ticket
