--- a/ticketmaster/src/app/ticket-add-edit/ticket-add-edit.component.html
+++ b/ticketmaster/src/app/ticket-add-edit/ticket-add-edit.component.html
@@ -1,5 +1,5 @@
 <div class="w-2/3 m-auto">
-    <h2 class="mb-4 text-2xl font-semibold">{{ isEditing ? 'Edit Ticket' : 'Create a Ticket' }}</h2>
+    <h2 class="mb-4 text-2xl font-semibold">{{ isEditing ? 'Edit Ticket #' + ticket.sorting_id : 'Create a Ticket' }}</h2>
     <form class="space-y-4" (ngSubmit)="saveTicket()">
         <div>
             <label class="block text-gray-700 font-medium">Name</label>
@@ -7,8 +7,12 @@
                 class="border border-gray-300 rounded w-full py-2 px-3 text-gray-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent">
         </div>
         <div class="flex justify-end">
-            <button type="submit" class="bg-blue-500 text-white font-semibold py-2 px-4 rounded hover:bg-blue-600">{{
-                isEditing ? 'Edit' : 'Create' }}</button>
+            <button 
+                type="submit" 
+                [disabled]="!ticket.name"
+                class="bg-blue-500 text-white font-semibold py-2 px-4 rounded hover:bg-blue-600 disabled:bg-gray-300 disabled:text-gray-500 disabled:cursor-not-allowed">
+                {{ isEditing ? 'Edit' : 'Create' }}
+            </button>
         </div>
     </form>
 </div>
